2014-03-31  Thomas Falcon <tlfalcon@linux.vnet.ibm.com>

	btrfs: fix get_root key comparison failures due to endianness

	* grub-core/fs/btrfs.c (get_root): Convert
	GRUB_BTRFS_ROOT_VOL_OBJECTID to little-endian.

2014-03-31  Colin Watson  <cjwatson@ubuntu.com>

	Fix partmap, cryptodisk, and abstraction handling in grub-mkconfig.

	Commit 588744d0dc655177d5883bdcb8f72ff5160109ed caused grub-mkconfig
	no longer to be forgiving of trailing spaces on grub-probe output
	lines, which among other things means that util/grub.d/10_linux.in
	no longer detects LVM.  To fix this, make grub-probe's output
	delimiting more consistent.  As a bonus, this improves the coverage
	of the -0 option.

	Fixes Debian bug #735935.

	* grub-core/disk/cryptodisk.c
	(grub_util_cryptodisk_get_abstraction): Add a user-data argument.
	* grub-core/disk/diskfilter.c (grub_diskfilter_get_partmap):
	Likewise.
	* include/grub/cryptodisk.h (grub_util_cryptodisk_get_abstraction):
	Update prototype.
	* include/grub/diskfilter.h (grub_diskfilter_get_partmap): Likewise.
	* util/grub-install.c (push_partmap_module, push_cryptodisk_module,
	probe_mods): Adjust for extra user-data arguments.
	* util/grub-probe.c (do_print, probe_partmap, probe_cryptodisk_uuid,
	probe_abstraction): Use configured delimiter.  Update callers.

2014-03-31  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-probe,c (options): Make -0 work again (broken by
	conversion to argp).
	(main): Simplify logic.

2014-03-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c: Fix the case when end of leftover is used.

2014-03-26  Fu Wei <fu.wei@linaro.org>

	* grub-core/loader/arm64/linux.c: Remove redundant "0x".

2014-02-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/openbsd_bootarg.h: Add addr and frequency fields.
	* grub-core/loader/i386/bsd.c (grub_cmd_openbsd): Fill addr field.

	Suggested by: Markus Müller.

2014-02-28  Vladimir Serbinenko  <phcoder@gmail.com>
